--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
+sudo: false
 language: node_js
 node_js:
   - 'iojs'
   - '0.12'
   - '0.10'
-install:
-  - npm install -g npm@2.13.2
+before_install:
+ - npm install -g npm@'2.13.2'
