--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "url": "https://github.com/thedark1337/Jethro-Koa/issues"
   },
   "dependencies": {
-    "chalk": "^1.1.1",
-    "humanize": "0.0.9",
+    "chalk": "^2.3.0",
+    "human-format": "^0.8.0",
     "jethro": "^2.6.3",
-    "passthrough-counter": "^1.0.0",
-    "pretty-ms": "^2.0.0"
+    "passthrough-counter": "^1.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^4.1.3",
-    "eslint-config-thedark1337": "^0.3.0",
-    "eslint-config-xo": "^0.6.0",
-    "eslint-plugin-babel": "^2.1.1",
-    "mocha": "^2.3.3",
-    "mocha-eslint": "^1.0.0"
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.10.0",
+    "eslint-config-thedark1337": "^4.11.1",
+    "eslint-plugin-babel": "^4.1.2",
+    "mocha": "^4.0.1",
+    "mocha-eslint": "^4.1.0"
   },
   "keywords": [
     "jethro",
